added template for customer orders, figured out query for related data

--- a/apps/market/templates/market/cart.html
+++ b/apps/market/templates/market/cart.html
@@ -100,7 +100,7 @@
                                     <a class="dropdown-item" href="/portfolio/{{request.session.user_id}}">My Portfolio</a>
                                 {% endif%}
                                 <a class="dropdown-item" href="/editprofile">Edit Account</a>
-                                <a class="dropdown-item" href="">View Orders</a>
+                                <a class="dropdown-item" href="/vieworders">View Orders</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="/logout">Logout</a>
                             </div>
