--- a/apps/market/templates/market/register.html
+++ b/apps/market/templates/market/register.html
@@ -47,7 +47,7 @@
                                     <a class="dropdown-item" href="/viewdesigns/{{request.session.user_id">Manage Designs</a>
                                 {% endif%}
                                 <a class="dropdown-item" href="/editprofile">Edit Account</a>
-                                <a class="dropdown-item" href="">View Orders</a>
+                                <a class="dropdown-item" href="/vieworders">View Orders</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="/logout">Logout</a>
                             </div>
