--- a/apps/market/templates/market/vieworders.html
+++ b/apps/market/templates/market/vieworders.html
@@ -71,33 +71,31 @@
         <hr>
           <div class="row justify-content-center">
             <div class="col-md-8">
-              <h3>Login</h3>
-              <hr>
-              {% if messages %}
-              <div class="alert alert-danger" role="alert">                
-                {% for message in messages %}
-                  <span class="text-monospace small"> {{message}}</span>
-                {% endfor %}
-              </div>
-              <hr>
-              {% endif %}
-              <form action="/login" method="post">
-                {% csrf_token %}
-                  <div class="form-row">
-                    <div class="form-group col-md-6">
-                        <label for="inputEmail">Email</label>
-                        <input type="email" class="form-control" id="inputEmail" name="email" placeholder="Email">
-                      </div>
-                    <div class="form-group col-md-6">
-                        <label for="inputPassword">Password</label>
-                        <input type="password" class="form-control" id="inputPassword" name="password" placeholder="Password">
-                      </div>
-                  </div>
-                  
-    
-                  <button type="submit" class="btn btn-primary">Login</button>
-                </form>
-            
+                <h2>Your Orders</h2>
+                <table class="table table-hover table-light">
+                        <thead>
+                          <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Date</th>
+                            <th scope="col">Order #</th>
+                            <th scope="col">Total Amount</th>
+                            <th scope="col">View Designs</th>
+                          </tr>
+                        </thead>
+                        <tbody class="align-middle">
+                            {% for order in orders %}
+                                <tr>
+                                    <td>{{forloop.counter}}</td>
+                                    <td>{{order.created_at}}</td>    
+                                    <td>{{order.id}}</td>
+                                    <td>${{order.order_cost}}</td>
+                                    <td><a href="/vieworders/{{order.id}}/{{request.session.user_id}}"><button class="btn btn-primary">Order Details</button></a></td>
+                                   
+                                </tr>
+                            {% endfor %}
+                                
+                        </tbody>
+                      </table>
             </div>
           </div>
         <hr>
