cleaned up formatting

--- a/apps/market/templates/market/orderdetails.html
+++ b/apps/market/templates/market/orderdetails.html
@@ -135,7 +135,7 @@
                                     <td><div class="test tower"><a href="/{{order.design.id}}"><img src="{% static order.design.display_image %}" class="img-thumbnail2"></a></div></td>
                                     <td>{{order.design.name}}</td>
                                     <td>{{order.design.desc}}</td>
-                                    <td>{{order.charged_price}}</td> 
+                                    <td>${{order.charged_price}}</td> 
 
                                     
                                     
