working on templating navbar

--- a/apps/market/templates/market/success.html
+++ b/apps/market/templates/market/success.html
@@ -69,12 +69,11 @@
     </nav>
     <div class="container-fluid">
         <hr>
-          <div class="row justify-content-center">
-            <div class="col-md-8">
-                <h2>Success!</h2>
-                <p>Thank you for making a purchase with ShirtAtlas, your design will shortly be emailed to you for use. Have a great day.</p>
-            </div>
-          </div>
+            {% block content %}
+        
+
+
+            {% endblock %}
         <hr>
         <div class="row">
             <div class="col text-center">www.shirtatlas.com</div>
