--- a/apps/market/templates/market/design.html
+++ b/apps/market/templates/market/design.html
@@ -42,12 +42,13 @@
                                     <a href="{{message}}" class="btn btn-secondary">Go Back</a>
                                 {% endfor %}
                             {% else %}
-                                <a href="{{request.META.HTTP_REFERER}}" class="btn btn-secondary">Go Back</a>
+                                <a href="{{request.META.HTTP_REFERER}}" class="btn btn-secondary btn-sm">Go Back</a>
                             {% endif %}
                             {% if design.designer.id == request.session.user_id %}
                             <div class="float-right">
-                                <a href="/portfolio/{{request.session.user_id}}/edit/{{design.id}}" class="btn btn-secondary">Edit Design</a>
-                                <a href="/portfolio/{{request.session.user_id}}/performance/{{design.id}}" class="btn btn-secondary" data-toggle="modal" data-target=".bd-example-modal-lg">View Sales</a>
+                                <a href="/portfolio/{{request.session.user_id}}" class="btn btn-secondary btn-sm">Portfolio</a>
+                                <a href="/portfolio/{{request.session.user_id}}/edit/{{design.id}}" class="btn btn-secondary btn-sm">Edit</a>
+                                <a href="/portfolio/{{request.session.user_id}}/performance/{{design.id}}" class="btn btn-secondary btn-sm" data-toggle="modal" data-target=".bd-example-modal-lg">View Sales</a>
                             </div> 
                     </div>
 
