fixed naming convention on nav template

--- a/apps/market/templates/market/cart.html
+++ b/apps/market/templates/market/cart.html
@@ -1,4 +1,4 @@
-{% extends "market/test.html" %}
+{% extends "market/navigation.html" %}
 {% load static %}
 {% block content %}
                 {% if messages %}
