--- a/apps/market/templates/market/success.html
+++ b/apps/market/templates/market/success.html
@@ -1,4 +1,4 @@
-{% extends "market/test.html" %}
+{% extends "market/navigation.html" %}
 
 {% block content %}
     <div class="row justify-content-center">
