--- a/apps/market/templates/market/register.html
+++ b/apps/market/templates/market/register.html
@@ -1,4 +1,4 @@
-{{% extends "market/navigation.html" %}
+{% extends "market/navigation.html" %}
 {% load static %}
 {% block content %}
           <div class="row justify-content-center">
