fixed error messaging

--- a/apps/market/templates/market/cart.html
+++ b/apps/market/templates/market/cart.html
@@ -4,14 +4,14 @@
                 {% if messages %}
             <div class="alert alert-danger" role="alert">
             {% for message in messages %}
-                <p class="text-monospace small" style="margin-bottom:0px;">{{ forloop.counter }}) {{message}} </p>
+                <p class="text-monospace small" style="margin-bottom:0px;">{{message}}. </p>
             {% endfor %}
             </div>
             <hr>
         {% endif %}
         {% if cart_empty %}
             <div class="alert alert-info" role="alert">
-                <p class="text-monospace small" style="margin-bottom:0px;">Your basket is empty, take a look at some of <a href="/designs">our designs.</a></p>
+                <p class="text-monospace small" style="margin-bottom:0px;">Your basket is empty, take a look at some of <a href="/designs">our designs</a>.</p>
             </div>
         {% endif %}
                 <div class="row">
