--- a/apps/market/templates/market/register.html
+++ b/apps/market/templates/market/register.html
@@ -10,7 +10,7 @@
                 
                 {% for message in messages %}
                 
-                  <p class="text-monospace small" style="margin-bottom:0px;">{{ forloop.counter }}) {{message}}. </p>
+                  <p class="text-monospace small" style="margin-bottom:0px;">{{message}}. </p>
                 {% endfor %}
               </div>
               <hr>
